--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "log4js": "^6.9.1",
     "node-napcat-ts": "^0.4.8",
     "prompts": "^2.4.2",
+    "puppeteer": "^24.4.0",
     "toml": "^3.0.0",
     "winston": "^3.12.0",
     "ws": "^8.18.1"
