中文友好原则

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "napcat",
     "ntqq"
   ],
-  "author": "wwcxin",
+  "author": "b23ing",
   "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/wwcxin/jiuyue/issues"
